# crux-os

./: README
crux/: .gitignore  COPYING  Config.mk  Kconfig  Kconfig.debug  Makefile  README  Rules.mk  build.mk  crux.dts
crux/arch/: Kconfig
crux/common/: COPYING  Kconfig  Makefile  README.source  argo.c  bitmap.c  bitops.c  bug.c  core_parking.c  cpu.c  cruxoprof.c  debugtrace.c  decompress.c  decompress.h  device.c  dm.c  domain.c  domctl.c  earlycpio.c  event_2l.c  event_channel.c  event_channel.h  event_fifo.c  grant_table.c  guestcopy.c  hypfs.c  ioreq.c  irq.c  kernel.c  kexec.c  keyhandler.c  kimage.c  livepatch.c  livepatch_elf.c  llc-coloring.c  lzo.c  mem_access.c  memory.c  monitor.c  multicall.c  (+38 more)
crux/crypto/: rijndael.c  (+1 more)
deux/: .gitignore  CMakeLists.txt  README  cook.py
deux/platform/aarch64/gnu/: CMakeLists.txt
deux/platform/aarch64/gnu/crux_build/: CMakeLists.txt
deux/platform/aarch64/gnu/crux_build/src/: crux_threadx.ld  pecoff.S  startup.S
deux/ports_smp/cortex_a53_smp/gnu/: CMakeLists.txt
deux/ports_smp/cortex_a53_smp/gnu/crux_build/deux/: startup.S
lk/: README  engine.mk
roux/: .gitignore  .gitmessage  Kconfig  LICENSE  Makefile  README  boot.cfg
up/: .clang-format  .gitignore  BUILD.bazel  Kconfig  Makefile  OWNERS  README  arm.fragment  cook-up.py  cook-xen-guest.py  cook.py  cookup.py  crosvm-aarch64.fragment  crosvm-x86_64.fragment  crosvm.fragment  cuttlefish.fragment  default_env.txt  default_xen_env.txt  device.bazelrc  gem5-aarch64.fragment  kiwi.fragment  kiwi_env.txt  kiwi_p.fragment  qemu-minimal.fragment  riscv64.fragment  rockpi4.fragment  x86.fragment  xen.fragment
up/api/: Kconfig
up/arch/: Kconfig
up/arch/arm/: Kconfig  Makefile
up/arch/arm/cpu/armv7/vf610/: Kconfig
up/arch/arm/cpu/armv8/: Kconfig  cache_v8.c  start.S  u-boot.lds
up/arch/arm/cpu/armv8/fsl-layerscape/: cpu.c
up/arch/arm/dts/: Makefile  crux-arm64.dts  xenguest-arm64.dts
up/arch/arm/include/asm/armv8/: mmu.h
up/arch/arm/lib/: elf_aarch64_efi.lds  interrupts_64.c
up/arch/arm/mach-crux/: Kconfig
up/arch/arm/mach-imx/imx8/: Kconfig
up/arch/arm/mach-imx/imx8m/: Kconfig
up/arch/arm/mach-imx/imx8ulp/: Kconfig
up/arch/arm/mach-imx/imx9/: Kconfig
up/arch/arm/mach-imx/imxrt/: Kconfig
up/arch/arm/mach-renesas/: Kconfig.rcar3  Kconfig.rzn1
up/arch/arm/mach-rockchip/px30/: Kconfig
up/arch/arm/mach-rockchip/rk3066/: Kconfig
up/arch/arm/mach-rockchip/rk3288/: Kconfig
up/arch/arm/mach-rockchip/rk3368/: Kconfig
up/arch/arm/mach-rockchip/rk3399/: Kconfig
up/arch/arm/mach-rockchip/rk3568/: Kconfig
up/arch/arm/mach-rockchip/rk3588/: Kconfig
up/arch/arm/mach-rockchip/rv1108/: Kconfig
up/arch/arm/mach-rockchip/rv1126/: Kconfig
up/arch/riscv/: Kconfig  config.mk
up/arch/riscv/cpu/: cpu.c
up/arch/riscv/lib/: elf_riscv32_efi.lds  elf_riscv64_efi.lds
up/arch/x86/: Kconfig  config.mk
up/arch/x86/cpu/: call32.S  sipi_vector.S  start16.S
up/arch/x86/cpu/qemu/: qemu.c
up/arch/x86/include/asm/: zimage.h
up/arch/x86/lib/: zimage.c
up/board/armltd/vexpress64/: Kconfig  vexpress64.c
up/board/emulation/: Kconfig
up/board/emulation/crux-arm/: Kconfig
up/board/emulation/qemu-arm/: qemu-arm.c
up/board/emulation/qemu-riscv/: qemu-riscv.c
up/board/xen/xenguest_arm64_dom0less/: Kconfig  Makefile  xenguest_arm64_dom0less.c
up/boot/: Kconfig  Makefile  android_ab.c  android_bootloader.c  android_bootloader_keymint.c  android_bootloader_oemlock.c  android_bootloader_transport.c  bootm.c  image-android.c  image-board.c  image-fdt.c
up/cmd/: Kconfig  Makefile  ab_select.c  abootimg.c  avb.c  bcb.c  bootmenu.c  console.c  fastboot.c  nvedit.c
up/common/: Kconfig  Makefile  avb_verify.c  board_r.c  cli.c  main.c
up/common/init/: board_init.c
up/configs/: am57xx_evm_defconfig  crux-arm64_defconfig  qemu_arm64_defconfig  xenguest_arm64_defconfig  xenguest_arm64_dom0less_defconfig  xenguest_arm64_domu_defconfig  xenguest_arm64_virtio_defconfig
up/disk/: part.c
up/drivers/core/: Kconfig  root.c  uclass.c
up/drivers/fastboot/: Kconfig  Makefile  fb_block.c  fb_command.c  fb_common.c  fb_getvar.c  fb_mmc.c
up/drivers/misc/: Kconfig
up/drivers/mmc/: rockchip_sdhci.c
up/drivers/pci/: Kconfig  pci_auto.c  pcie_ecam_generic.c
up/drivers/serial/: ns16550.c
up/drivers/virtio/: Kconfig  virtio-uclass.c  virtio_blk.c  virtio_console.c  virtio_console.h  virtio_net.c
up/env/: env.c
up/examples/standalone/: Makefile
up/include/: android_ab.h  android_bootloader.h  android_bootloader_oemlock.h  android_bootloader_transport.h  android_image.h  avb_verify.h  bcb.h  cli.h  efi_api.h  efi_gbl_ab.h  efi_gbl_fastboot.h  efi_gbl_image_loading.h  efi_gbl_os_configuration.h  efi_loader.h  fastboot.h  fb_block.h  image.h  linker_lists.h  log.h  ndisc.h  net.h  net6.h  part.h  spl.h  virtio.h
up/include/configs/: qemu-arm.h  qemu-riscv.h  rk3399_common.h  x86-common.h  xenguest_arm64_dom0less.h
up/include/dm/: uclass.h
up/include/linux/: arm-smccc.h
up/include/net/: tcp.h  tcp6.h
up/lib/: Kconfig  Makefile  vsprintf.c
up/lib/efi_driver/: Kconfig  Makefile  efi_gbl_ab_protocol.c  efi_gbl_fastboot_protocol.c  efi_gbl_image_loading_protocol.c  efi_gbl_os_configuration_protocol.c
up/lib/efi_loader/: efi_net.c  efi_setup.c
up/lib/efi_selftest/: Makefile  efi_selftest_gbl_ab_protocol.c  efi_selftest_gbl_fastboot_protocol.c  efi_selftest_gbl_image_loading.c
up/lib/libavb/: avb_slot_verify.c  avb_vbmeta_image.c  avb_vbmeta_image.h
up/net/: Makefile  fastboot_tcp.c  ndisc.c  net.c  net6.c  ping6.c  tcp.c  tcp6.c
up/post/: Makefile
up/scripts/: Makefile.lib  Makefile.spl
up/scripts/dtc/: Makefile
up/scripts/dtc/pylibfdt/: libfdt.i_shipped
up/scripts/kconfig/: Makefile
up/test/cmd/: wget.c
up/test/common/: Makefile  avb_verify.c
up/tools/: Makefile
zeus/: .gitignore  Kconfig.zephyr  README  cook.py
zeus/zeus/: CMakeLists.txt  prj.conf
zeus/zeus/src/: xcmd.c  zeus.c
zeus/zeus/src/coremark/: core_config.h  core_main.c  core_portme.c  core_portme.h  core_shcmd.c
zeus/zeus/src/latency/: latency.c
(+9305 files in other folders)
